addresses responsive layout issues.

--- a/myuw/static/css/photo_list.less
+++ b/myuw/static/css/photo_list.less
@@ -19,22 +19,21 @@
 
     .myuw-photo-list-controls {
 
-        @media @two-column {
-            .controls-row-1 {
+        .myuw-photo-list-controls-sort {
+            margin: 16px 0;
+            white-space: nowrap;
+            @media @two-column { margin-top: -6px; }
+
+            #sort_list {
                 display: inline-block;
-                width: 65%;
+                width: auto;
+                vertical-align: middle;
             }
 
-            .controls-row-2 {
-                display: inline-block;
-                width: 34%;
+            #toggle_joint {
+                margin-left: 16px;
             }
         }
-
-        .myuw-photo-list-controls-view { display:inline-block; margin-right:16px; }
-        .myuw-photo-list-controls-sort { display:inline-block; }
-        .myuw-photo-list-controls-sort[aria-hidden="true"] { display: none; }
-
         .myuw-photo-list-controls-actions {
             margin: 8px 0px;
             @media @two-column { text-align: right; margin: 0; }
