--- a/myuw/static/css/typography.less
+++ b/myuw/static/css/typography.less
@@ -216,6 +216,7 @@ h3.heading-page, h3.myuw-heading-page, .myuw-article h3 {
 * Sample HTML: <a class="myuw-iconlink"><i class="fa"></i>Link text</a>
 ***/
 .myuw-iconlink {
+    white-space: nowrap;
     i,
     .fa {
         margin-right: .4rem;
